--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,3 +29,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    
+    - name: Build and push Docker Image
+      uses: mr-smithers-excellent/docker-build-push@v4
+      with:
+        image: toregard/demo:1
+        registry: docker.io
+        username: ${{secrets.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
